# python-interview-prep

./: .editorconfig  .gitignore  Makefile  README.md  _README.rst  archive.html  index.html  pyproject.toml  requirements.txt  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  tools_cheatsheet.md
.github/: labeler.yml
.github/workflows/: main.yml
about/: index.html
assets/css/: all-nocdn.css  all.css  custom.css
assets/js/: custom.js  tagcloudTermsData.js
blog/: index.html
categories/: index.html
cloud-of-terms/: index.html
galleries/: index.html  rss.xml
in-progress/: index.html
interview-prep/: index.html
knowledge-base/: index.html
knowledge-scope/: index.html
lake-of-links/: index.html
links-lake/: index.html
listings/: args_passing.py.html  bad_practices.py  bad_practices.py.html  bad_vs_good_practices.py.html  good_practices.py.html  index.html  snake_walks_the_big_story.py.html
listings/data/: index.html
listings/exercises/: Pythonlearn-15-Database-Handout.sql  Pythonlearn-15-Database-Handout.sql.html  __init__.py.html  age_script.py.html  args_passing.py.html  ascii_transformation.py.html  basic_collections.py  basic_collections.py.html  check_palindrome.py  check_palindrome.py.html  classplay.py.html  comprehensions.py.html  context_managers.py.html  continuous _countries.py.html  copying_objects.py  copying_objects.py.html  (+76 more)
naming-convention/: index.html
python-best-practices/: index.html
show-me-the-code/: index.html
snake_path/: .doit.db.db  conf.py
system-design/: index.html
tools-shell-cheatsheet/: index.html
(+56 files in other folders)
