[project]
name = "python-interview-prep"
version = "0.1.0"
authors = [{name="Ivan Prytula, email="ivanprytula87@gmail.com"}]
description = "Hands-on materials for knowledge refreshing and interview prep."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://ivanprytula.github.io/python-the-snake-path/"
